--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,7 @@ name = "pypi"
 alembic = "1.8.1"
 importlib-metadata = "6.0.0"
 importlib-resources = "5.10.0"
-ipdb = "0.13.9"
+ipdb = "*"
 sqlalchemy = "1.4.42"
 
 [dev-packages]
